--- a/ansible/roles/was8/tasks/ibmfp.yaml
+++ b/ansible/roles/was8/tasks/ibmfp.yaml
@@ -4,9 +4,7 @@
     url: "{{ download_FP_url }}{{ item }}"
     dest: "{{ Extract_FP_location }}"
   with_items:
-    - 8.5.5-WS-WAS-FP013-part1.zip
-    - 8.5.5-WS-WAS-FP013-part2.zip
-    - 8.5.5-WS-WAS-FP013-part3.zip
+    - "{{ WAS-FP013 }}"
 
 - name: "Extract fixpack archive"
   unarchive:
@@ -14,9 +12,7 @@
     dest: "{{ Extract_FP_location }}"
     copy: no
   with_items:
-    - 8.5.5-WS-WAS-FP013-part1.zip
-    - 8.5.5-WS-WAS-FP013-part2.zip
-    - 8.5.5-WS-WAS-FP013-part3.zip
+    - "{{ WAS-FP013 }}"
 
 - name: "Run slient install on {{installationDirectory}}"
   command: '{{imcl_path}} install com.ibm.websphere.BASE.v85_8.5.5012.20170627_1018 -repositories "{{ Extract_FP_location }}" -installationDirectory "{{ installationDirectory }}" -acceptLicense -sP'
@@ -24,9 +20,7 @@
 - name: "Remove fixPacks packages"
   file: "path=\"{{Extract_FP_location}}{{item}}\" state=absent"
   with_items:
-    - 8.5.5-WS-WAS-FP013-part1.zip
-    - 8.5.5-WS-WAS-FP013-part2.zip
-    - 8.5.5-WS-WAS-FP013-part3.zip
+    - "{{ WAS-FP013 }}"
 
 - name: "Clean up the unarchived FP Dir"
   file: "path=\"{{Extract_FP_location}}\" state=absent"
