--- a/ansible/roles/was8/defaults/main.yml
+++ b/ansible/roles/was8/defaults/main.yml
@@ -1,26 +1,4 @@
 ---
-# defaults file for zabbix-agent
-zabbix_agent_interfaces:
-  - type: 1
-    main: 1
-    useip: "{{ zabbix_useuip }}"
-    ip: "{{ zabbix_agent_ip }}"
-    dns: "{{ ansible_fqdn }}"
-    port: "{{ zabbix_agent_listenport }}"
-zabbix_agent_pidfile: /var/run/zabbix/zabbix_agentd.pid
-zabbix_agent_logfile: /var/log/zabbix/zabbix_agentd.log
-zabbix_agent_logfilesize: 100
-zabbix_agent_debuglevel: 3
-zabbix_agent_sourceip:
-zabbix_agent_enableremotecommands: 1
-zabbix_agent_logremotecommands: 1
-zabbix_agent_listenport: 10050
-zabbix_agent_listeninterface:
-zabbix_agent_startagents: 3
-zabbix_agent_hostname: "{{ inventory_hostname }}"
-zabbix_agent_hostnameitem:
-zabbix_agent_hostmetadata: Linux
-zabbix_agent_hostmetadataitem:
-zabbix_agent_refreshactivechecks: 120
-zabbix_agent_serveractive: sonarqube01.financialservices.int.tds.tieto.com
-zabbix_agent_server: sonarqube01.financialservices.int.tds.tieto.com
+# defaults versions for WAS installation
+ WAS-FP013: ["8.5.5-WS-WAS-FP013-part1.zip","8.5.5-WS-WAS-FP013-part2.zip","8.5.5-WS-WAS-FP013-part3.zip"]
+ IBMWASJAVA: ["8.0.3.20-WS-IBMWASJAVA-part1.zip","8.0.3.20-WS-IBMWASJAVA-part2.zip"]
