--- a/ansible/roles/was8/tasks/ibmsdk.yaml
+++ b/ansible/roles/was8/tasks/ibmsdk.yaml
@@ -4,8 +4,7 @@
     url: "{{ download_JAVASDK_url }}{{ item }}"
     dest: "{{ Extract_JAVASDK_location }}"
   with_items:
-    - 8.0.3.20-WS-IBMWASJAVA-part1.zip
-    - 8.0.3.20-WS-IBMWASJAVA-part2.zip
+    - "{{ IBMWASJAVA }}"
 
 
 - name: "Extract SDK archive"
@@ -14,8 +13,7 @@
     dest: "{{ Extract_JAVASDK_location }}"
     copy: no
   with_items:
-    - 8.0.3.20-WS-IBMWASJAVA-part1.zip
-    - 8.0.3.20-WS-IBMWASJAVA-part2.zip
+    - "{{ IBMWASJAVA }}"
 
 - name: "Run silent install to {{installationDirectory}}"
   command: '{{imcl}} install com.ibm.websphere.IBMJAVA.v80_8.0.3020.20161124_1304  -repositories "{{ Extract_JAVASDK_location }}"  -installationDirectory  {{installationDirectory}} -acceptLicense -sP'
@@ -25,8 +23,8 @@
 - name: "Remove SDK packages after install"
   file: "path=\"{{Extract_JAVASDK_location}}{{item}}\" state=absent"
   with_items:
-    - 8.0.3.20-WS-IBMWASJAVA-part1.zip
-    - 8.0.3.20-WS-IBMWASJAVA-part2.zip
+    - "{{ IBMWASJAVA }}"
+
 
 - name: "Clean up the unarchived SDK Dir"
   file: "path=\"{{Extract_JAVASDK_location}}\" state=absent"
