updated was install

--- a/ansible/roles/was8/tasks/ibmfp.yaml
+++ b/ansible/roles/was8/tasks/ibmfp.yaml
@@ -4,7 +4,7 @@
     url: "{{ download_FP_url }}{{ item }}"
     dest: "{{ Extract_FP_location }}"
   with_items:
-    - "{{ WAS-FP013 }}"
+    - "{{ WASFP013 }}"
 
 - name: "Extract fixpack archive"
   unarchive:
@@ -12,7 +12,7 @@
     dest: "{{ Extract_FP_location }}"
     copy: no
   with_items:
-    - "{{ WAS-FP013 }}"
+    - "{{ WASFP013 }}"
 
 - name: "Run slient install on {{installationDirectory}}"
   command: '{{imcl_path}} install com.ibm.websphere.BASE.v85_8.5.5013.20170627_1018 -repositories "{{ Extract_FP_location }}" -installationDirectory "{{ installationDirectory }}" -acceptLicense -sP'
@@ -20,7 +20,7 @@
 - name: "Remove fixPacks packages"
   file: "path=\"{{Extract_FP_location}}{{item}}\" state=absent"
   with_items:
-    - "{{ WAS-FP013 }}"
+    - "{{ WASFP013 }}"
 
 - name: "Clean up the unarchived FP Dir"
   file: "path=\"{{Extract_FP_location}}\" state=absent"
