--- a/ansible/roles/was8/tasks/ibmim.yaml
+++ b/ansible/roles/was8/tasks/ibmim.yaml
@@ -5,7 +5,7 @@
     state: directory
   with_items: 
     - /DevOps_Do_Not_Delete/IM
-    - /DevOps_Do_Not_Delete/WAS8.5
+    - /DevOps_Do_Not_Delete/WAS9
     - /DevOps_Do_Not_Delete/SDK
     - /DevOps_Do_Not_Delete/FP
     - /tmp/im
