--- a/ansible/roles/was8/tasks/ibmwas8.yaml
+++ b/ansible/roles/was8/tasks/ibmwas8.yaml
@@ -4,24 +4,25 @@
     url: "{{ download_WAS_url }}{{ item }}"
     dest: "{{Extract_WAS_location}}"
   with_items:
-    - "{{ WAS85 }}"
+    - "{{ WAS9 }}"
 
 - name: "Extract was8 archive"
+  unarchive: 
   unarchive: 
     dest: "{{ Extract_WAS_location }}"
     src: "{{ Extract_WAS_location }}{{ item }}"
     copy: no
   with_items: 
-    - "{{ WAS85 }}"
+    - "{{ WAS9 }}"
 
 - name: "Run slient install into {{installationDirectory}}"
-  command: '{{imcl_path}} install com.ibm.websphere.BASE.v85_8.5.5000.20130514_1044 -repositories {{ Extract_WAS_location }} -installationDirectory  {{installationDirectory}} -acceptLicense -sP'
-  args: 
+  command: '{{imcl_path}} install com.ibm.websphere.BASE.v90_9.0.9.20180906_1004 -repositories {{ Extract_WAS_location }} -installationDirectory  {{installationDirectory}} -acceptLicense -sP'
+  args:                            
     creates: /opt/tools/IBM/WebSphere/AppServer/bin/versionInfo.sh
   
 - name: "Remove was8 packages"
   file: "path=\"{{Extract_WAS_location}}{{item}}\" state=absent"
   with_items: 
-    - "{{ WAS85 }}"
+    - "{{ WAS9 }}"
 - name: "Clean up the unarchived WAS Dir"
   file: "path=\"{{Extract_WAS_location}}\" state=absent"
