--- a/ansible/roles/was8/vars/main.yml
+++ b/ansible/roles/was8/vars/main.yml
@@ -2,7 +2,7 @@
 Extract_FP_location: /DevOps_Do_Not_Delete/FP/
 Extract_IM_location: /DevOps_Do_Not_Delete/IM/
 Extract_JAVASDK_location: /DevOps_Do_Not_Delete/SDK/
-Extract_WAS_location: /DevOps_Do_Not_Delete/WAS8.5/
+Extract_WAS_location: /DevOps_Do_Not_Delete/WAS9/
 download_FP_url: https://maven.etb.tieto.com/artifactory/fs-pcm-misc/IBM/AppServer/WebSphere/WAS9.0/FP9/
 download_IIM_url: https://maven.etb.tieto.com/artifactory/fs-pcm-misc/IBM/AppServer/WebSphere/WAS9.0/IM/{{ zip }}
 download_JAVASDK_url: https://maven.etb.tieto.com/artifactory/fs-pcm-misc/IBM/AppServer/WebSphere/WAS9.0/SDK/
