--- a/ansible/roles/was8/tasks/ibmwas8.yaml
+++ b/ansible/roles/was8/tasks/ibmwas8.yaml
@@ -16,7 +16,9 @@
     - "{{ WAS9 }}"
 
 - name: "Run slient install into {{installationDirectory}}"
-  command: '{{imcl_path}} install com.ibm.websphere.BASE.v90_9.0.9.20180906_1004 -repositories {{ Extract_WAS_location }} -installationDirectory  {{installationDirectory}} -acceptLicense -sP'
+  command: '{{imcl_path}} install {{ item }} -repositories {{ Extract_WAS_location }} -installationDirectory  {{installationDirectory}} -acceptLicense -sP'
+  with_items:
+  - "{{ WAS9FPrepo }}"
   args:                            
     creates: /opt/tools/IBM/WebSphere/AppServer/bin/versionInfo.sh
   
