--- a/ansible/roles/was8/tasks/ibmwas8.yaml
+++ b/ansible/roles/was8/tasks/ibmwas8.yaml
@@ -22,9 +22,9 @@
   args:                            
     creates: /opt/tools/IBM/WebSphere/AppServer/bin/versionInfo.sh
   
-- name: "Remove was8 packages"
-  file: "path=\"{{Extract_WAS_location}}{{item}}\" state=absent"
-  with_items: 
-    - "{{ WAS9 }}"
-- name: "Clean up the unarchived WAS Dir"
-  file: "path=\"{{Extract_WAS_location}}\" state=absent"
+#- name: "Remove was8 packages"
+#  file: "path=\"{{Extract_WAS_location}}{{item}}\" state=absent"
+#  with_items: 
+#    - "{{ WAS9 }}"
+#- name: "Clean up the unarchived WAS Dir"
+#  file: "path=\"{{Extract_WAS_location}}\" state=absent"
