--- a/ansible/roles/was8/tasks/ibmwas8.yaml
+++ b/ansible/roles/was8/tasks/ibmwas8.yaml
@@ -16,7 +16,7 @@
     - "{{ WAS9 }}"
 
 - name: "Run slient install into {{installationDirectory}}"
-  command: '{{imcl_path}} install {{ item }} -repositories {{ Extract_WAS_location }} -installationDirectory  {{installationDirectory}} -acceptLicense -sP'
+  shell: '{{imcl_path}} install {{ item }} -repositories {{ Extract_WAS_location }} -installationDirectory  {{installationDirectory}} -acceptLicense -sP'
   with_items:
   - "com.ibm.websphere.BASE.v90_9.0.9.20180906_1004"
   args:                            
